--- a/app/src/main/res/layout/fragment_profil_biodata.xml
+++ b/app/src/main/res/layout/fragment_profil_biodata.xml
@@ -35,21 +35,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:text="Ubah Profil"
+        android:text="Edit Profil"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/textView3"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_profil_biodata_upload_foto"
+        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Anda bisa menetapkan alamat pengiriman yang tersimpan di pengaturan"
+        android:layout_marginEnd="16dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="Ganti foto profil"
         android:textAlignment="viewStart"
-        android:textColor="@color/gray_600"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="@+id/rv_biodata_profil"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/rv_biodata_profil"
         app:layout_constraintTop_toBottomOf="@+id/rv_biodata_profil" />
 
