--- a/app/src/main/res/layout/fragment_profil_biodata.xml
+++ b/app/src/main/res/layout/fragment_profil_biodata.xml
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar_profil_biodata" />
 
     <Button
-        android:id="@+id/btn_edit_profil"
+        android:id="@+id/btn_profil_biodata_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
