--- a/app/src/main/res/layout/fragment_form_upload_foto.xml
+++ b/app/src/main/res/layout/fragment_form_upload_foto.xml
@@ -18,7 +18,7 @@
         android:id="@+id/iv_form_upload_foto_profil"
         android:layout_width="180dp"
         android:layout_height="180dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_form_upload_foto" />
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/rubik_medium"
         android:text="Foto profil anda"
         android:textColor="@color/gray_600"
@@ -42,12 +42,24 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. "
+        android:text="Klik foto profil diatas untuk mengubah foto profil anda. Setelah foto profil dipilih, silahkan klik tombol simpan dibawah."
         android:textColor="@color/gray_600"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tv_form_upload_foto_title"
         app:layout_constraintTop_toBottomOf="@+id/tv_form_upload_foto_title"
         app:lineHeight="24sp" />
+
+    <Button
+        android:id="@+id/btn_form_upload_foto_simpan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:text="Simpan"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_form_upload_foto_deskripsi"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
