--- a/app/src/main/res/layout/fragment_form_upload_foto.xml
+++ b/app/src/main/res/layout/fragment_form_upload_foto.xml
@@ -62,4 +62,16 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_form_upload_foto_deskripsi"
         app:layout_constraintVertical_bias="1.0" />
 
+    <ImageView
+        android:id="@+id/iv_form_upload_foto_ubah"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_edit"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_form_upload_foto_profil"
+        app:layout_constraintEnd_toEndOf="@+id/iv_form_upload_foto_profil"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/iv_form_upload_foto_profil"
+        app:layout_constraintTop_toTopOf="@+id/iv_form_upload_foto_profil"
+        app:layout_constraintVertical_bias="1.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
